--- a/QuerietorTopObject/QuerietorTopObject/QuerietorTopObject.csproj
+++ b/QuerietorTopObject/QuerietorTopObject/QuerietorTopObject.csproj
@@ -12,8 +12,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuerietorTier</RootNamespace>
-    <AssemblyName>QuerietorTier</AssemblyName>
+    <RootNamespace>QuerietorTopObject</RootNamespace>
+    <AssemblyName>QuerietorTopObject</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -174,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Compiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="querietor.aspx.cs">
       <DependentUpon>querietor.aspx</DependentUpon>
@@ -193,7 +194,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
