--- a/QuerietorTopObject/QuerietorTopObject/QuerietorTopObject.csproj
+++ b/QuerietorTopObject/QuerietorTopObject/QuerietorTopObject.csproj
@@ -118,7 +118,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Site.css" />
     <Content Include="dlls\EjemploClassLib.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -193,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
